-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0, 5.4.0, 5.5.0 RC
-
570c848e6d546d35b408770e1b1d1d954268d519
The following code seems to break QML DropArea as soon as you've dragged something into it once.
How to reproduce:
- Drag something into area
- Notice that 'entered' is printed on the console
- Drag something into area again
- 'entered' is not printed again
Expected behavior:
- 'entered' is printed each time something is dragged into the area
import QtQuick 2.2 Rectangle { id: rect width: 200 height: 200 anchors.fill: parent DropArea { anchors.fill: parent onEntered: { console.log("entered"); drag.accepted = false; } } }
| For Gerrit Dashboard: QTBUG-39453 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 88612,2 | Fix rejecting drag enter events in QML DropArea | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |